# simple-api

./: .gitignore  README.md  database.yaml  pyproject.toml  requirements.txt  setup.py  teste.py
sapi/: __init__.py  router.py
sapi/core/: __init__.py  app.py  database.py  managers.py  models.py  router.py
sapi/security/: __init__.py  jwt.py  login.py
